// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Fragment>
  <h1>
    Display Active Users Account Details
  </h1>
  <h3>
    Fetching Users...
  </h3>
</Fragment>
`;

exports[`renders without crashing 1`] = `
<Fragment>
  <h1>
    title
  </h1>
  <p>
    First paragraph
  </p>
  <h2>
    Welcome to React Testing
  </h2>
  ;
  <h3>
    Fetching Users...
  </h3>
</Fragment>
`;
